gif banner change

--- a/src/app/pages/home/index/carousel-basic/carousel-basic.component.html
+++ b/src/app/pages/home/index/carousel-basic/carousel-basic.component.html
@@ -4,7 +4,7 @@
         <ngb-carousel>
             <ng-template ngbSlide>
                 <div class="homeslider-main one">
-                    <div class="extra">
+                    <!-- <div class="extra">
                         <h3> <span>NEW EXCLUSIVE</span> </h3>
                         <h3 class="smart animate__animated animate__flipInY animate__delay-1s"> Stunning Visuals </h3>
                         <h1 class="animate__animated animate__fadeInDown animate__delay-1s animate__faster"><span> PC MONITOR </span></h1>
@@ -21,10 +21,10 @@
                     <div class="discounttext animate__animated animate__bounceIn animate__delay-2s">
                         <span>50%</span>
                         Discount
-                    </div>
+                    </div> -->
                 </div>
             </ng-template>
-            <ng-template ngbSlide>
+            <!-- <ng-template ngbSlide>
                 <div class="homeslider-main two">
                     <div class="extra">
                         <h3> <span>NEW EXCLUSIVE</span> </h3>
@@ -59,7 +59,7 @@
                         <img src="assets/images/H510.png" class="img-fluid">
                     </div>
                 </div>
-            </ng-template>
+            </ng-template> -->
         </ngb-carousel>
     </div>
 </div>
