--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -13,7 +13,7 @@
 
     <molla-home-slider></molla-home-slider>
 
-    <molla-modal-basic></molla-modal-basic>
+    <!-- <molla-modal-basic></molla-modal-basic> -->
 
     <!--  bootstrap slider component end  -->
 
