--- a/src/app/pages/shop/productcheckout/productcheckout.component.html
+++ b/src/app/pages/shop/productcheckout/productcheckout.component.html
@@ -166,6 +166,12 @@
                                 <small *ngIf="userForm.controls.Email.errors?.pattern" class="text-danger">Please Provide a Valid Email Address</small>
                               </div>
 
+                              <label>GST</label>
+                            <input type="test" name="gst" formControlName="gst" class="form-control" >
+                           
+                               
+
+
 
                             <!-- <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="checkout-create-acc">
