--- a/src/app/shared/components/headers/shared/mobile-menu/mobile-menu.component.html
+++ b/src/app/shared/components/headers/shared/mobile-menu/mobile-menu.component.html
@@ -225,6 +225,12 @@
                                     Graphic card
                                 </a>
                             </li>
+                            <li>
+                                <a class="drop-mobile-menu" routerLink="/shop/Graphic Card/3cols/" [queryParams]="{category: 13,'page':1}">
+                                    <img src="/assets/images/icons/motherboard.png" class="img-fluid">
+                                    Motherboard
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                 </ng-template>
