--- a/src/app/pages/home/index/index.component.scss
+++ b/src/app/pages/home/index/index.component.scss
@@ -1174,7 +1174,7 @@ a{
 }
 
 .four {
-    background-image: url('/assets/images/banner1-4.png');
+    background-image: url('/assets/images/3\ IN\ 1\ COMBINE.jpg');
 }
 
 .center-content {
