--- a/src/app/pages/home/index/index.component.scss
+++ b/src/app/pages/home/index/index.component.scss
@@ -1137,9 +1137,9 @@ a{
             min-height: 225px;
         }
     }
-    .newarrial {
-        margin-top: 180px;
-    }
+    // .newarrial {
+    //     margin-top: 180px;
+    // }
 }
 
    
